--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory("Chapter1/")
 add_subdirectory("Chapter2/")
 add_subdirectory("Chapter3/")
+add_subdirectory("Chapter4/")
+add_subdirectory("Chapter5/")
+add_subdirectory("Chapter6/")
 
 add_custom_target(ProjectRelatedFiles SOURCES
     .astylerc
